fix sys-control buttons gap

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -224,6 +224,7 @@ header a:hover {
 
 .sys-control {
     display: flex;
+    gap: 20px;
 }
 
 button {
